--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="slider">
         <figure>
-            <img src="img/img1.jpg" width="80%" height= 525px >
-            <img src="img/img2.jpg" width="80%" height=525px>
-            <img src="img/img3.jpg" width="80%" height=525px>
-            <img src="img/img4.jpg" width="80%" height=525px>
-            <img src="img/img5.jpg" width="80%" height=525px>
+            <img src="img/img1.jpg" height=525px>
+            <img src="img/img2.jpg" height=525px>
+            <img src="img/img3.jpg" height=525px>
+            <img src="img/img4.jpg" height=525px>
+            <img src="img/img5.jpg" height=525px>
         </figure>
     </div>
 </body>
